fix: 569 - section wrapping

--- a/src/widgets/training-program/ui/training-program.module.scss
+++ b/src/widgets/training-program/ui/training-program.module.scss
@@ -1,4 +1,5 @@
 .training-program {
+  flex-direction: row;
   gap: 100px;
 
   .left {
